.provarCaches/00D5f000005vwGkEAI/objects/rstk__labreason__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_labreason</customHelpPage>
    <description>labreason__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__labreason_div__r.rstk__sydiv_div__c + &apos;_&apos; +  rstk__labreason_code__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__labreason_code__c + &apos; (&apos; +  rstk__labreason_desc__c + &apos;)&apos;</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__labreason_code__c</fullName>
        <inlineHelpText>Code used to identify specific reason for adding labor.  10 characters, alpha-numeric.</inlineHelpText>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__labreason_desc__c</fullName>
        <inlineHelpText>Description of Reason Code.  Up to 100 characters.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__labreason_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division Master</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Labor Reason</relationshipLabel>
        <relationshipName>divlabreasons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Labor Reason</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Labor Reason</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Validation_Code</fullName>
        <active>true</active>
        <description>Validation Code</description>
        <errorConditionFormula>ISBLANK( rstk__labreason_code__c )</errorConditionFormula>
        <errorMessage>Please provide required field Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validation_Description</fullName>
        <active>true</active>
        <description>Validation Description</description>
        <errorConditionFormula>ISBLANK( rstk__labreason_desc__c)</errorConditionFormula>
        <errorMessage>Please provide required field Description</errorMessage>
    </validationRules>
</CustomObject>